style: fix height on mobile devices in landscape mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,7 +50,7 @@ input[type=text], input[type=email], input[type=password] {
   @apply rounded-md px-4 py-2;
 }
 
-@screen md {
+@screen sm {
   .gradient_block_1, .gradient_block_2 {
     height: 900px;
   }
